# lunation

./: .gitignore  README.md  pyproject.toml
.github/workflows/: bundle.yml
lunation/: __main__.py  cli.py  optics.py
lunation/assemble/: collect.py  disk.py  encode.py  landmarks.py  prep.py  quality.py  register.py  render.py
lunation/core/: fftreg.py  framecube.py  kernels.py  stats.py  warp.py
lunation/finish/: chain.py  primitives.py
lunation/gui/: __init__.py  app.py  blink.py  model.py  preview.py  window.py
lunation/io/: avi.py  images.py  ser.py  xisf_io.py
lunation/master/: __init__.py  discovery.py  job.py  pipeline.py  scheduler.py
lunation/stack/: localwarp.py  logutil.py  runner.py  stacker.py  trim.py
packaging/: app.py  build_app.py
tests/: synth.py  test_avi.py  test_blink.py  test_discovery.py  test_fftreg.py  test_finish_primitives.py  test_framecube.py  test_fringes.py  test_gui_model.py  test_gui_window.py  test_master.py  test_master_e2e.py  test_prep.py  test_ser.py  test_stack_e2e.py  test_trim.py  test_warp.py  test_xisf.py
tools/: compare_frames.py  compare_stacks.py  rim_audit.py
