[project]
name = "lunation"
version = "2.0.0a0"
description = "Lunation — standalone lunar lucky-imaging pipeline (PixInsight-free port)"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "opencv-python-headless>=4.10",
    "scikit-image>=0.24",
    "drizzle>=2.0",
    "astropy>=6.1",
    "tifffile>=2024.8.0",
    "xisf>=0.9",
    "typer>=0.12",
]

[project.scripts]
lunation = "lunation.cli:main"

[dependency-groups]
dev = ["pytest>=8.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lunation"]

[tool.uv]
# keep caches off the system drive — python-install-dir/cache-dir are set via env in scripts/py.sh
# and documented in README; .venv lives in-repo on D:.

[tool.pytest.ini_options]
testpaths = ["tests"]
