[project]
name = "lunation"
version = "2.0.0"
description = "Lunation — standalone lunar lucky-imaging pipeline (PixInsight-free port)"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.14",
    "opencv-python-headless>=4.10",
    "scikit-image>=0.24",
    "drizzle>=2.0",
    "astropy>=6.1",
    "tifffile>=2024.8.0",
    "xisf>=0.9",
    "typer>=0.12",
    "pillow>=12.3.0",
    "psutil>=6.0",
]

[project.optional-dependencies]
# desktop GUI is a heavy Qt dep — core CLI installs stay lean:
#   uv tool install lunation[gui]
gui = ["pyside6>=6.7"]

[project.scripts]
lunation = "lunation.cli:main"

[dependency-groups]
# matplotlib: never imported by lunation — present only so PyInstaller's
# astropy hook (which imports every astropy submodule) can walk
# astropy.visualization without dying; excluded from bundles
dev = ["pytest>=8.3", "pyside6>=6.7", "pyinstaller>=6.10",
       "matplotlib>=3.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lunation"]

[tool.hatch.build.targets.sdist]
# release artifacts carry the package, not the dev tree (tests, docs,
# dev configs stay in the repo)
include = ["lunation/**", "README.md", "pyproject.toml"]

[tool.uv]
# keep caches off the system drive — python-install-dir/cache-dir are set via env in scripts/py.sh
# and documented in README; .venv lives in-repo on D:.

[tool.pytest.ini_options]
testpaths = ["tests"]
